force-app/core/main/default/objects/Demo_Persona_Activity__c/Demo_Persona_Activity__c.object-meta.xml
<CustomObject>
    <label>Persona Activity</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Persona Activity ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Persona Activitys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>