force-app/core/main/default/objects/Demo_Persona_Activity__c/fields/Icon__c.field-meta.xml
<CustomField>
    <fullName>Icon__c</fullName>
    <label>Icon</label>
    <length>64</length>
    <type>Text</type>
</CustomField>