force-app/core/main/default/objects/Demo_Persona_Activity__c/fields/Timestamp_Label__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_Label__c</fullName>
    <label>Timestamp Label</label>
    <length>64</length>
    <type>Text</type>
</CustomField>