force-app/core/main/default/objects/Demo_Persona_Activity__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Email</fullName><default>false</default><label>Email</label></value>
            <value><fullName>SMS</fullName><default>false</default><label>SMS</label></value>
            <value><fullName>Web</fullName><default>false</default><label>Web</label></value>
            <value><fullName>Doc</fullName><default>false</default><label>Doc</label></value>
            <value><fullName>Call</fullName><default>false</default><label>Call</label></value>
            <value><fullName>Meeting</fullName><default>false</default><label>Meeting</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>